# aks-architect-ai

./: .env.sample  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  docker-compose.dev.yaml  system-prompt.md
.claude/: CLAUDE.md
.claude/rules/: configuration.md  javascript.md  js-data-validation.md  nuxt.md  ssr-client-boundary.md
.claude/skills/: ai-sdk.md  auth.md  composable-layers.md  nuxt-ui.md  pinia-stores.md
.claude/skills/nuxt-ui/: SKILL.md
.github/workflows/: lint.yaml  unit-tests.yaml  validate-sources.yaml
advisor-api/: Dockerfile  README.md  pyproject.toml
advisor-api/app/: config.py  dependencies.py  main.py  models.py
advisor-api/app/routers/: chat.py  health.py  healthz.py
advisor-api/app/services/: llm.py  reformulation.py  retrieval.py
advisor-api/tests/: test_chat.py  test_reformulation.py  test_retrieval.py  test_retrieve.py
advisor-ui/: Dockerfile.dev  README.md  content.config.ts  drizzle.config.ts  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
advisor-ui/app/: app.config.ts  app.vue
advisor-ui/app/components/: ChatMessage.vue  SourceLinks.vue  app-header.vue  chat-assistant-avatar.vue  chat-message.vue  chat-title-header.vue  chat-tool-part.vue  design-snapshot-card.vue  design-update-proposal.vue  disclaimer-alert.vue  sidebar-footer.vue  source-links.vue
advisor-ui/app/composables/: useChatSession.ts  useChatSession2.ts  useChatSessions.ts  useDesign.ts  useNewDesign.ts  useRequirementsSchema.ts  useSpecLookup.ts  useSpecSchema.ts
advisor-ui/app/layouts/: default.vue  guide.vue
advisor-ui/app/models/: Design.test.ts  Design.ts
advisor-ui/app/pages/: chat.vue  index.vue  (+1 more)
advisor-ui/content/: README.md  index.md
advisor-ui/drizzle/: 0000_common_lady_bullseye.sql  0001_material_falcon.sql  0002_large_dark_beast.sql  0003_cold_madripoor.sql  0004_legal_scalphunter.sql
db/: init.sql
docs/: AI SDK and Nuxt UI.md  Nuxt - AI SDK.md  README.md  chat-design-architecture.md
rag-pipeline/: README.md  chunk.py  config.py  embed.py  pyproject.toml  query.py  requirements.txt  tag.py
rag-pipeline/helpers/: chunking.py  taxonomy.py
rag-pipeline/tests/helpers/: test_chunking.py
retrieval-api/: README.md  pyproject.toml
retrieval-api/app/: config.py  dependencies.py  main.py  models.py
retrieval-api/app/routers/: healthz.py  retrieve.py
retrieval-api/app/services/: reformulation.py  retrieval.py
retrieval-api/tests/: test_reformulation.py  test_retrieval.py  test_retrieve.py
web-scraper/: .gitignore  README.md  SOURCES.yaml  package-lock.json  package.json  sources.yaml  tsconfig.json
web-scraper/SOURCES/: README.md  ai-toolchain-operator.yaml  azure-arc.yaml  baseline-architecture.yaml  best-practices.yaml  core-concepts.yaml  high-availability-setups.yaml  labs.yaml  landing-zone-accelerator.yaml  monitoring.yaml  networking-egress.yaml  networking-ingress.yaml  networking.yaml  node-management.yaml  operations.yaml  policy.yaml  pricing-quotas.yaml  scale.yaml  security.yaml  storage.yaml  support.yaml  workloads.yaml
web-scraper/src/: config.ts  crawler.ts  main.ts  types.ts
(+203 files in other folders)
