[project]
name = "advisor-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.9.0",
    "ollama>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
