[project]
name = "retrieval-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.4.0",
    "ollama>=0.4.0",
    "anthropic>=0.52.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

# Ruff rule sets — https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors   — https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",  # pyflakes             — https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # isort (imports)      — https://docs.astral.sh/ruff/rules/#isort-i
    "W",  # pycodestyle warnings — https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
]
